objects/CounterfeitTraceCode__c.object
<CustomObject>
    <fields>
        <fullName>ArchivalDate__c</fullName>
        <description>Feed Outbound - Hardcode value &apos;NULL&apos;</description>
        <formula>&apos;NULL&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ArchivalDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeCategory__c</fullName>
        <description>Feed Outbound-CounterfeitTraceCode</description>
        <formula>&apos;CRC&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CodeCategory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeType__c</fullName>
        <description>Feed Outbound-CounterfeitTraceCode</description>
        <formula>&apos;CounterfeitTraceCode&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CodeType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>Feed Outbound - DateFormat.</description>
        <formula>MID( TEXT(CreatedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 0, 4) + &quot; &quot;+MID(TEXT(CreatedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayDescription__c</fullName>
        <description>Feed Outbound - Trace Code</description>
        <formula>Trace_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplayDescription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <description>Feed Outbound - Empty Value &apos;NULL&apos;</description>
        <formula>&apos;NULL&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplayOrder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Feed Outbound-CounterfeitTraceCode</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>Feed Outbound-CounterfeitTraceCode</description>
        <formula>MID( TEXT(LastModifiedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 0, 4) + &quot; &quot;+MID(TEXT(LastModifiedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mfg_Date__c</fullName>
        <description>Feed Outbound-CounterfeitTraceCode</description>
        <label>Mfg_Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModuleName__c</fullName>
        <description>Feed Outbound-CounterfeitTraceCode</description>
        <formula>&apos;ALTRIA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ModuleName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <description>Mfg_Date|

Feed Outbound-CounterfeitTraceCode</description>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <description>Feed Outbound-CounterfeitTraceCode</description>
        <label>Request_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_ID__c</fullName>
        <description>Feed Outbound-CounterfeitTraceCode</description>
        <label>Row_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScreenName__c</fullName>
        <description>Feed Outbound-CounterfeitTraceCode</description>
        <formula>&apos;GLOBAL&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ScreenName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <description>Feed Outbound-CounterfeitTraceCode</description>
        <formula>&apos;AloricaAltria&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TenantId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TraceCode_Varchar1__c</fullName>
        <description>Feed Outbound - Hardcode Trace code value for Varchar1</description>
        <formula>Trace_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TraceCode_Varchar1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trace_Code__c</fullName>
        <label>Trace Code</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Feed Outbound-CounterfeitTraceCode</description>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CounterfeitTraceCode</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Trace_Code__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>CounterfeitTraceCode ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CounterfeitTraceCodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>